--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -10,8 +10,8 @@ ext {
     testInstrumentationRunner = "androidx.test.runner.AndroidJUnitRunner"
 
     //Library Versions
-    androidXVersion = '1.1.0-rc01'
-    ktxVersion = '1.2.0-alpha03'
+    androidXVersion = '1.2.0'
+    ktxVersion = '1.3.2'
     constraintLayoutVersion = '1.1.3'
     coroutinesVersion = '1.4.0'
     daggerVersion = '2.22'
@@ -27,10 +27,11 @@ ext {
     glideVersion = '4.9.0'
     timberVersion = '4.7.1'
     glassfishAnnotationVersion = '10.0-b28'
-    fragmentVersion = '1.2.0-alpha01'
-    androidXLifecycleVersion = '2.1.0-rc01'
+    fragmentVersion = '1.2.5'
+    activityVersion = '1.1.0'
+    androidXLifecycleVersion = '2.2.0'
     multiDexVersion = '2.0.1'
-    navigationVersion = '2.2.0-rc01'
+    navigationVersion = '2.3.2'
     exoPlayerVersion = '2.11.4'
     mediaVersion = '1.1.0'
     lifecycleVersion = '2.2.0'
@@ -154,7 +155,8 @@ ext {
             recyclerView                 : "androidx.recyclerview:recyclerview:${recyclerViewVersion}",
             recyclerViewSelection        : "androidx.recyclerview:recyclerview-selection:${recyclerViewSelectionVersion}",
             viewPager                    : "androidx.viewpager2:viewpager2:${viewPagerVersion}",
-            androidxFragment             : 'androidx.fragment:fragment:${fragmentVersion}',
+            androidxFragment             : "androidx.fragment:fragment:${fragmentVersion}",
+            androidxActivity             : "androidx.activity:activity-ktx:${activityVersion}",
             androidxLifecycleExtensions  : "androidx.lifecycle:lifecycle-extensions:${androidXLifecycleVersion}",
             androidxLifecycleViewmodelKtx: "androidx.lifecycle:lifecycle-viewmodel-ktx:${androidXLifecycleVersion}",
             androidLiveDataKtx           : "androidx.lifecycle:lifecycle-livedata-ktx:${livedataktxVersion}",
