--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,7 @@ allprojects {
     gradle.projectsEvaluated {
         tasks.withType(org.jetbrains.kotlin.gradle.tasks.AbstractKotlinCompile).all {
             kotlinOptions.freeCompilerArgs += ["-Xuse-experimental=kotlinx.coroutines.ExperimentalCoroutinesApi"]
+            kotlinOptions.freeCompilerArgs += ["-Xuse-experimental=kotlinx.coroutines.FlowPreview"]
             kotlinOptions.jvmTarget = "1.8"
         }
     }
