--- a/app/build.gradle
+++ b/app/build.gradle
@@ -86,6 +86,7 @@ dependencies {
     implementation appDependencies.navigationFragment
     implementation appDependencies.navigationUI
     implementation appDependencies.media
+    implementation appDependencies.fastScroller
     //For popup menus
     implementation appDependencies.cascade
 
