--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -40,6 +40,7 @@ ext {
     dataStoreVersion = '1.0.0-alpha05'
     livedataktxVersion = '2.2.0'
     cascadeVersion = '1.2.0'
+    fastScrollerVersion = '1.1.5'
 
     //Compose versions
     composeVersion = '1.0.0-alpha01'
@@ -166,7 +167,8 @@ ext {
             navigationUI                 : "androidx.navigation:navigation-ui-ktx:${navigationVersion}",
             media                        : "androidx.media:media:${mediaVersion}",
             dataStorePrefs               : "androidx.datastore:datastore-preferences:${dataStoreVersion}",
-            cascade                      : "me.saket.cascade:cascade:${cascadeVersion}"
+            cascade                      : "me.saket.cascade:cascade:${cascadeVersion}",
+            fastScroller                 : "me.zhanghai.android.fastscroll:library:${fastScrollerVersion}"
     ]
 
     composeDependencies = [
